--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
 
 #logo {
   background:url(images/teachyourselflogo.png) no-repeat top center;
-  height:200px;
+  height:100px;
   text-indent:-9999px;
 }
 
@@ -45,11 +45,11 @@
   font: 2.2em "Geneva", sans-serif;
 }
 
-.switch {
+/*.switch {
   display: block;
   /*text-transform: initial;*/
-  margin-top: 50px;
-}
+  /*margin-top: 50px;
+}*/
 
 ul { 
   list-style-type: none; 
@@ -62,23 +62,24 @@ body {
   margin: 40px;
 }
 
-table {
+/*table {
   width: 600px;
   height: 600px;
 }
 
-td {
+table#grid {
+  align-self: center;
+}*/
+
+/*td {
   width: 100px;
   height: 100px;
   outline: 2px solid;
   float: left;
-}
+}*/
 
-#grid {
-  float: center;
-}
 
-.backQorA {
+/*.backQorA {
   float:left;
   margin: 10px;
   background: blue;
@@ -94,6 +95,27 @@ td {
   width: 100px
   height: 100px;
   cursor: pointer;
+}*/
+
+div#memory_board {
+  /*background:#CCC;*/
+  border:#999 1px solid;
+  width:800px;
+  height:540px;
+  padding:24px;
+  margin:0px auto;
+}
+div#memory_board > div {
+  background: url(images/botticelli-Question.jpg) no-repeat;
+  border:#000 1px solid;
+  width:71px;
+  height:71px;
+  float:left;
+  margin:10px;
+  padding:20px;
+  font-size:64px;
+  cursor:pointer;
+  text-align:center;
 }
 
 
